fix overflowing background

--- a/src/background/Background.scss
+++ b/src/background/Background.scss
@@ -1,9 +1,10 @@
 .Background {
-    overflow: hidden;
     height: 100vh;
+    left: 0;
+    overflow: hidden;
     position: absolute;
     top: 0;
-    left: 0;
+    width: 100%;
     z-index: -1;
 
     .background-container {
